Scrollbar: ensure we've top-margin on horizontal sliders

--- a/Ambiance/gtk-3.0/gtk-widgets.css
+++ b/Ambiance/gtk-3.0/gtk-widgets.css
@@ -1172,7 +1172,9 @@ GtkScale.mark {
 }
 
 .scrollbar.horizontal:hover,
-.scrollbar.horizontal.dragging {
+.scrollbar.horizontal.dragging,
+.scrollbar.horizontal.slider:hover,
+.scrollbar.horizontal.slider.dragging {
     margin-top: 2px;
 }
 
